# docker-monitor

./: LICENSE  README.md
agent/: Cargo.toml
agent/src/: main.rs
backend/: Cargo.toml  config.toml
backend/src/: main.rs
backend/templates/: index.html
frontend/src/: App.svelte  Machine.svelte  global.css
web/: package-lock.json  package.json  tsconfig.json  vite.config.js
web/src/: App.svelte  App.svelte.bak  Greeting.svelte
web/src/routes/: index.html  machine.svelte  main.js  main.ts  page.svelte
web/src/routes/machines/: container.svelte  index.html  machines.js  machines.ts  page.svelte
web/src/routes/nested/: index.html
web/src/test/: page.svelte
