[package]
name = "docker_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
bollard = "0.14"
config = "0.13"
tera = "1.18"
rand = "0.8.5"
actix-files = "0.6.2"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.6.2"